{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 2018,
  "lineage": "0b1c0b8b-f238-dd72-34e8-731f74b91957",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "clixx-app-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081cd16fa8fda6d61",
            "association_id": "eipassoc-0e898d79463186c30",
            "domain": "vpc",
            "id": "eipalloc-081cd16fa8fda6d61",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06fa087428f44efbd",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-54-225-167-71.compute-1.amazonaws.com",
            "public_ip": "54.225.167.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Clixx App NAT EIP"
            },
            "tags_all": {
              "Name": "Clixx App NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:541478845275:instance/i-04025039bc2f3fca7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04025039bc2f3fca7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d381a5024834ba7e",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_ip": "54.91.195.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e479586747e34559",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0210fa21190d6ac96",
            "tags": {
              "Environment": "dev",
              "Name": "stack-clixx-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "stack-clixx-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd3bd02ce731bf87"
            ]
          },
          "dependencies": [
            "aws_db_instance.clixx-retail-app",
            "aws_db_subnet_group.clixx_db_subnet_group",
            "aws_efs_file_system.stack-clixx-EFS",
            "aws_key_pair.Stack_KP",
            "aws_lb.clixx-app-load-balancer",
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-mysql",
            "aws_security_group.clixx-bastion-server",
            "aws_subnet.clixx-priv1-appserv1",
            "aws_subnet.clixx-priv2-appserv2",
            "aws_subnet.clixx-pub1",
            "aws_subnet.clixx-pub2",
            "aws_vpc.clixx-app-vpc",
            "data.template_file.bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "clixx_app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:internet-gateway/igw-070aeddc3ec20b0e3",
            "id": "igw-070aeddc3ec20b0e3",
            "owner_id": "541478845275",
            "tags": {
              "Name": "clixx_app_igw"
            },
            "tags_all": {
              "Name": "clixx_app_igw"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "clixx-app-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:loadbalancer/app/clixx-app-load-balancer/2dce352b966a7bc5",
            "arn_suffix": "app/clixx-app-load-balancer/2dce352b966a7bc5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clixx-app-load-balancer-1482251575.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:541478845275:loadbalancer/app/clixx-app-load-balancer/2dce352b966a7bc5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clixx-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fee34b84aa1f5e75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0210fa21190d6ac96"
              },
              {
                "subnet_id": "subnet-039376d95aa2bcc9c"
              }
            ],
            "subnets": [
              "subnet-0210fa21190d6ac96",
              "subnet-039376d95aa2bcc9c"
            ],
            "vpc_id": "vpc-0e7beb62792888e21",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_subnet.clixx-pub1",
            "aws_subnet.clixx-pub2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "clixx-app-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:listener/app/clixx-app-load-balancer/2dce352b966a7bc5/7dcb7da1e4c08ba3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541478845275:listener/app/clixx-app-load-balancer/2dce352b966a7bc5/7dcb7da1e4c08ba3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:loadbalancer/app/clixx-app-load-balancer/2dce352b966a7bc5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.clixx-app-load-balancer",
            "aws_lb_target_group.clixx-app-target-group",
            "aws_security_group.clixx-app-loadbalancer",
            "aws_subnet.clixx-pub1",
            "aws_subnet.clixx-pub2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clixx-app-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f",
            "arn_suffix": "targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541478845275:targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "clixx-app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "register-ec2-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:541478845275:targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f-20230830060006215000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:541478845275:targetgroup/clixx-app-target-group/3d4e7f7e6cedb57f",
            "target_id": "i-04025039bc2f3fca7"
          },
          "dependencies": [
            "aws_db_instance.clixx-retail-app",
            "aws_db_subnet_group.clixx_db_subnet_group",
            "aws_efs_file_system.stack-clixx-EFS",
            "aws_instance.Server",
            "aws_key_pair.Stack_KP",
            "aws_lb.clixx-app-load-balancer",
            "aws_lb_target_group.clixx-app-target-group",
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-mysql",
            "aws_security_group.clixx-bastion-server",
            "aws_subnet.clixx-priv1-appserv1",
            "aws_subnet.clixx-priv2-appserv2",
            "aws_subnet.clixx-pub1",
            "aws_subnet.clixx-pub2",
            "aws_vpc.clixx-app-vpc",
            "data.template_file.bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "clixx-app-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081cd16fa8fda6d61",
            "association_id": "eipassoc-0e898d79463186c30",
            "connectivity_type": "public",
            "id": "nat-0537e25702f8b831a",
            "network_interface_id": "eni-06fa087428f44efbd",
            "private_ip": "10.0.1.182",
            "public_ip": "54.225.167.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0210fa21190d6ac96",
            "tags": {
              "Name": "Clixx App NAT Gateway"
            },
            "tags_all": {
              "Name": "Clixx App NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.clixx-app-eip",
            "aws_subnet.clixx-pub1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0514f1a4eece6155f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0537e25702f8b831a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.clixx-app-eip",
            "aws_nat_gateway.clixx-app-nat",
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-pub1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clixx-app-rtpriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:route-table/rtb-0514f1a4eece6155f",
            "id": "rtb-0514f1a4eece6155f",
            "owner_id": "541478845275",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0537e25702f8b831a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clixx-app-rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:route-table/rtb-05a6fb99c971b5ff7",
            "id": "rtb-05a6fb99c971b5ff7",
            "owner_id": "541478845275",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070aeddc3ec20b0e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clixx-app-rtpub"
            },
            "tags_all": {
              "Name": "clixx-app-rtpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.clixx_app_igw",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "clixx-pub1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f1181beba3e719a",
            "route_table_id": "rtb-05a6fb99c971b5ff7",
            "subnet_id": "subnet-0210fa21190d6ac96"
          },
          "dependencies": [
            "aws_internet_gateway.clixx_app_igw",
            "aws_route_table.clixx-app-rtpub",
            "aws_subnet.clixx-pub1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "clixx-pub2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd5218390b7f9280",
            "route_table_id": "rtb-05a6fb99c971b5ff7",
            "subnet_id": "subnet-039376d95aa2bcc9c"
          },
          "dependencies": [
            "aws_internet_gateway.clixx_app_igw",
            "aws_route_table.clixx-app-rtpub",
            "aws_subnet.clixx-pub2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0464a38ff82d5bca4",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0345a8c8eae188056"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv1-appserv1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd478e1a4f0672e",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-07d2fd167e6c6e28b"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv10-oracleDB2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b96567b6df990ac8",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0c0a7f99456be9184"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv2-appserv2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026bd91a3bf98abcd",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-08b9d3f4149520fe2"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv3-appServ1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bfd27ece1647129",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0bec1176cc3b7a582"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv4-appServ2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfb1b0d9fe8aa3be",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0ddbc9bfa573d27db"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv5-javaDB1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037ddceff80c7f204",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0849db50538380d37"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv6-javaDB2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a68eb619154f459f",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0534cda91f3ed2947"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv7-javaserv1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006cfda19cd4780fe",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0cb8e51ae8a517158"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv8-javaserv2",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048805b642380b91e",
            "route_table_id": "rtb-0514f1a4eece6155f",
            "subnet_id": "subnet-0ee51d1e163657bcf"
          },
          "dependencies": [
            "aws_route_table.clixx-app-rtpriv",
            "aws_subnet.clixx-priv9-oracleDB1",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clixx-app-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:security-group/sg-0fee34b84aa1f5e75",
            "description": "Load Balancer Security Group For CliXX App",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fece22475cd9e5c9"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fece22475cd9e5c9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fece22475cd9e5c9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0fee34b84aa1f5e75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Clixx app load balancer",
            "name_prefix": "",
            "owner_id": "541478845275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clixx-app-loadbalancer"
            },
            "tags_all": {
              "Name": "clixx-app-loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clixx-app-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:security-group/sg-08bb0c7c261b789b0",
            "description": "MySql Security Group For CliXX App",
            "egress": [],
            "id": "sg-08bb0c7c261b789b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd3bd02ce731bf87",
                  "sg-0fece22475cd9e5c9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Clixx app mysql",
            "name_prefix": "",
            "owner_id": "541478845275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Clixx app mysql"
            },
            "tags_all": {
              "Name": "Clixx app mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clixx-app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:security-group/sg-0fece22475cd9e5c9",
            "description": "App Server Security Group For CliXX App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fece22475cd9e5c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee34b84aa1f5e75"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd3bd02ce731bf87"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee34b84aa1f5e75"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee34b84aa1f5e75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Clixx app server",
            "name_prefix": "",
            "owner_id": "541478845275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clixx-app-server"
            },
            "tags_all": {
              "Name": "clixx-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clixx-bastion-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:security-group/sg-0fd3bd02ce731bf87",
            "description": "Bastion Server Security Group For CliXX App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fece22475cd9e5c9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08bb0c7c261b789b0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0fd3bd02ce731bf87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Clixx bastion server",
            "name_prefix": "",
            "owner_id": "541478845275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clixx-bastion-server"
            },
            "tags_all": {
              "Name": "clixx-bastion-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2393521124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fece22475cd9e5c9",
            "security_group_rule_id": "sgr-01d9cc288816a6539",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_ingress_2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-1793082022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fece22475cd9e5c9",
            "security_group_rule_id": "sgr-02199e219165a0ece",
            "self": false,
            "source_security_group_id": "sg-0fee34b84aa1f5e75",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3320936460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fece22475cd9e5c9",
            "security_group_rule_id": "sgr-0753cdba6d29a1c28",
            "self": false,
            "source_security_group_id": "sg-0fd3bd02ce731bf87",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-server",
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_ingress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1481503327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fece22475cd9e5c9",
            "security_group_rule_id": "sgr-060891b514de61e95",
            "self": false,
            "source_security_group_id": "sg-0fee34b84aa1f5e75",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_ingress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-798233625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fece22475cd9e5c9",
            "security_group_rule_id": "sgr-0c87a08a7f3cedfea",
            "self": false,
            "source_security_group_id": "sg-0fee34b84aa1f5e75",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_server_egress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3040464440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd3bd02ce731bf87",
            "security_group_rule_id": "sgr-0996cf32c7253bbec",
            "self": false,
            "source_security_group_id": "sg-0fece22475cd9e5c9",
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-server",
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_server_egress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1933001622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd3bd02ce731bf87",
            "security_group_rule_id": "sgr-09f22b7162488deee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_server_egress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1939793769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd3bd02ce731bf87",
            "security_group_rule_id": "sgr-093bf491d25a09fbe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_server_egress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-4180314698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd3bd02ce731bf87",
            "security_group_rule_id": "sgr-0da7319b74177705e",
            "self": false,
            "source_security_group_id": "sg-08bb0c7c261b789b0",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-mysql",
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_server_ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-9779706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd3bd02ce731bf87",
            "security_group_rule_id": "sgr-0ee2429373ce22af9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loadbalancer_egress_2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-959579334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fee34b84aa1f5e75",
            "security_group_rule_id": "sgr-05a482fc4ffc5c6f5",
            "self": false,
            "source_security_group_id": "sg-0fece22475cd9e5c9",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loadbalancer_egress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1336422692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fee34b84aa1f5e75",
            "security_group_rule_id": "sgr-041af96eefe23e197",
            "self": false,
            "source_security_group_id": "sg-0fece22475cd9e5c9",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loadbalancer_egress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1395599285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fee34b84aa1f5e75",
            "security_group_rule_id": "sgr-0b1900c2da075ec91",
            "self": false,
            "source_security_group_id": "sg-0fece22475cd9e5c9",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loadbalancer_ingress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4280070599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fee34b84aa1f5e75",
            "security_group_rule_id": "sgr-01bdd3c03fda24c82",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "loadbalancer_ingress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1029607262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fee34b84aa1f5e75",
            "security_group_rule_id": "sgr-0281d6d74d6924625",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-loadbalancer",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_ingress_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3199990543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb0c7c261b789b0",
            "security_group_rule_id": "sgr-0cbf76e01a0f818e9",
            "self": false,
            "source_security_group_id": "sg-0fece22475cd9e5c9",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-mysql",
            "aws_security_group.clixx-app-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_ingress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2080951188",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb0c7c261b789b0",
            "security_group_rule_id": "sgr-08c671e225b81cb35",
            "self": false,
            "source_security_group_id": "sg-0fd3bd02ce731bf87",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.clixx-app-mysql",
            "aws_security_group.clixx-bastion-server",
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv1-appserv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0345a8c8eae188056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0345a8c8eae188056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Application_Server1"
            },
            "tags_all": {
              "Name": "Private_Subnet_Application_Server1"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv10-oracleDB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-07d2fd167e6c6e28b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d2fd167e6c6e28b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_OracleDB-Clone"
            },
            "tags_all": {
              "Name": "Private_Subnet_OracleDB-Clone"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv2-appserv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0c0a7f99456be9184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0a7f99456be9184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Application_Server2"
            },
            "tags_all": {
              "Name": "Private_Subnet_Application_Server2"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv3-appServ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-08b9d3f4149520fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b9d3f4149520fe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Application_DB1"
            },
            "tags_all": {
              "Name": "Private_Subnet_Application_DB1"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv4-appServ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0bec1176cc3b7a582",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.28.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec1176cc3b7a582",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Application_DB2"
            },
            "tags_all": {
              "Name": "Private_Subnet_Application_DB2"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv5-javaDB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0ddbc9bfa573d27db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddbc9bfa573d27db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Java_App_DB1"
            },
            "tags_all": {
              "Name": "Private_Subnet_Java_App_DB1"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv6-javaDB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0849db50538380d37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0849db50538380d37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Java_App_DB2"
            },
            "tags_all": {
              "Name": "Private_Subnet_Java_App_DB2"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv7-javaserv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0534cda91f3ed2947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0534cda91f3ed2947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Java_App_Server1"
            },
            "tags_all": {
              "Name": "Private_Subnet_Java_App_Server1"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv8-javaserv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0cb8e51ae8a517158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb8e51ae8a517158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Java_App_Server2"
            },
            "tags_all": {
              "Name": "Private_Subnet_Java_App_Server2"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-priv9-oracleDB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0ee51d1e163657bcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee51d1e163657bcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_OracleDB"
            },
            "tags_all": {
              "Name": "Private_Subnet_OracleDB"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-0210fa21190d6ac96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0210fa21190d6ac96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_EC2_Bastion1"
            },
            "tags_all": {
              "Name": "Public_Subnet_EC2_Bastion1"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clixx-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:subnet/subnet-039376d95aa2bcc9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039376d95aa2bcc9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541478845275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet2_EC2_Bastion2"
            },
            "tags_all": {
              "Name": "Public_Subnet2_EC2_Bastion2"
            },
            "vpc_id": "vpc-0e7beb62792888e21"
          },
          "dependencies": [
            "aws_vpc.clixx-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clixx-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:vpc/vpc-0e7beb62792888e21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054dca55e19fffeba",
            "default_route_table_id": "rtb-0f665de96491d8674",
            "default_security_group_id": "sg-0ab2e4fb8798ea311",
            "dhcp_options_id": "dopt-05db69f88db11ef93",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7beb62792888e21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f665de96491d8674",
            "owner_id": "541478845275",
            "tags": {
              "Name": "clixx-app-vpc"
            },
            "tags_all": {
              "Name": "clixx-app-vpc"
            }
          }
        }
      ]
    }
  ]
}